@@ -77,8 +77,6 @@ public class CartServiceImpl implements CartService {
 		// 5. Save cart Item
 		CartItems savedCartItem = this.cartItemRepository.save(newCartItem);
 
-		// Update product quantity
-		product.setQuantity(product.getQuantity() - quantity);
 		this.productRepository.save(product);
 
 		// Update cart total price
@@ -110,14 +108,18 @@ public class CartServiceImpl implements CartService {
 
 		List<CartDTO> cartDTOs = carts.stream().map(cart -> {
 			CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
-			List<ProductDTO> products = cart.getCartItems().stream().map(item -> {
-				ProductDTO productDTO = modelMapper.map(item.getProduct(), ProductDTO.class);
-				productDTO.setQuantity(item.getQuantity());
+
+			List<ProductDTO> products = cart.getCartItems().stream().map(cartItem -> {
+				ProductDTO productDTO = modelMapper.map(cartItem.getProduct(), ProductDTO.class);
+				productDTO.setQuantity(cartItem.getQuantity()); // Set the quantity from CartItem
 				return productDTO;
-			}).toList();
+			}).collect(Collectors.toList());
+
 			cartDTO.setProducts(products);
+
 			return cartDTO;
-		}).toList();
+
+		}).collect(Collectors.toList());
 		return cartDTOs;
 	}
 
@@ -230,10 +232,10 @@ public class CartServiceImpl implements CartService {
 		Product product = this.productRepository.findById(productId)
 				.orElseThrow(() -> new ResourceNotFoundException("Product", "productId", productId));
 		CartItems cartItem = this.cartItemRepository.findCartItemsByProductIdAndCartId(cartId, productId);
-		if(cartItem == null)
-			throw new APIException("Product "+product.getProductName()+" not available in the cart!!!");
-		
-		double cartPrice = cart.getTotalPrice() - (cartItem.getProductPrice()*cartItem.getQuantity());
+		if (cartItem == null)
+			throw new APIException("Product " + product.getProductName() + " not available in the cart!!!");
+
+		double cartPrice = cart.getTotalPrice() - (cartItem.getProductPrice() * cartItem.getQuantity());
 		cartItem.setProductPrice(cartPrice + (cartItem.getProductPrice() * cartItem.getQuantity()));
 		cartItem.setProductPrice(product.getSpecialPrice());
 		cartItem = this.cartItemRepository.save(cartItem);
